--- a/_includes/scripts/plugins.html
+++ b/_includes/scripts/plugins.html
@@ -24,4 +24,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/plugins/ScrollToPlugin.min.js"></script> 
-<script src="/js/flow.js"></script>
+<script src="/js/gsap.js"></script>
