close #270 change stories to anything

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -27,8 +27,8 @@
             <a href="/#why" data-proofer-ignore>Why</a>
             <a href="/#how" data-proofer-ignore>How</a>
             <a href="/#what" data-proofer-ignore>What</a>
-            <a href="/gigs/" data-proofer-ignore>Gigs</a>
-            <a href="/stories/">Stories</a>
+            <a href="/anything/" data-proofer-ignore>Anything</a>
+            <a href="/stories/" data-proofer-ignore>Stories</a>
           </div>
           <div class="col-lg col-xs-6">
             <h1>Our Credo</h1>
@@ -51,7 +51,9 @@
           <div class="col-lg col-xs-6">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT No.: 39464101</a>
+            <a
+              href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT
+              No.: 39464101</a>
             intern@prolike.io<br />
             <a href="tel:+45 20 872 530">+45 20 872 530</a>
             <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
