--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -9,12 +9,9 @@
           <li><a href="/#why" data-proofer-ignore>Why</a></li>
           <li> <a href="/#how" data-proofer-ignore>How</a></li>
           <li> <a href="/#what" data-proofer-ignore>What</a></li>
-          <li> <a href="/flow/" data-proofer-ignore>Infographics</a></li>
-<!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
-          <li> <a href="/services/" data-proofer-ignore>Services</a></li>
-          <li> <a href="/stories/" data-proofer-ignore>Stories</a></li>
-          <li> <a href="https://github.com/login/oauth/authorize?client_id=44203f7dbb6402bb922b&redirect_uri=http://192.168.99.100/login/" data-proofer-ignore>Log in</a></li>
-          
+          <!-- <li> <a href="/stories/" data-proofer-ignore>Stories</a></li> -->
+          <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li>
+          <li> <a href="/anything/" data-proofer-ignore>Anything</a></li>
         </ul>
       </span>
     </div>
