close #280 set scope on authendication link

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -12,6 +12,10 @@
           <!-- <li> <a href="/stories/" data-proofer-ignore>Stories</a></li> -->
           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li>
           <li> <a href="/anything/" data-proofer-ignore>Anything</a></li>
+          <li> <a href="/flow/" data-proofer-ignore>Infographics</a></li>
+<!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
+          <li> <a href="https://github.com/login/oauth/authorize?client_id=44203f7dbb6402bb922b&redirect_uri=http://dockerhost/login/&scope=user%20repo" data-proofer-ignore>Log in</a></li>
+          
         </ul>
       </span>
     </div>
