close #282 fix a in the env configuration

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 {% if jekyll.environment == "production" %}
 {% assign enviclient = "e0f6efcea962b1fd7d27" %}
-{% elsif jekyll.environment == "stage"} 
+{% elsif jekyll.environment == "stage" %} 
 {% assign enviclient = "4ea04d5b07580f9ac8e0" %}
 {% else %}
 {% assign enviclient = "44203f7dbb6402bb922b" %}
