close #283 remove uri_redirect parameter ind authendication url

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -22,7 +22,7 @@
           <li> <a href="/anything/" data-proofer-ignore>Anything</a></li>
           <li> <a href="/flow/" data-proofer-ignore>Infographics</a></li>
 <!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
-          <li> <a href="https://github.com/login/oauth/authorize?client_id={{ enviclient }}&redirect_uri=http://dockerhost/login/&scope=user%20repo" data-proofer-ignore>Log in</a></li>
+          <li> <a href="https://github.com/login/oauth/authorize?client_id={{ enviclient }}&scope=user%20repo" data-proofer-ignore>Log in</a></li>
           
         </ul>
       </span>
