--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <body id="page-top">
     {% if jekyll.environment == "production" %}
     {% assign envi = "prod" %}
-{% elsif jekyll.environment == "stage"} 
+{% elsif jekyll.environment == "stage" %} 
 {% assign envi = "stage" %}
   {% else %}
     {% assign envi = "local" %}
