close #260 projects prolike styling of the message board box

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -7,11 +7,12 @@ layout: page
     <div class="row">
         <div class="col-lg-8 col-xs-12 msgBoard">
             <div class="col-12">
-                <p class="board-heading"></p>
+                <p>Message board</p>
                 <p class="cost-name">{{ page.name }}</p>
-                {{ content }}
+                <p>{{ content }}</p>
             </div>
         </div>
+
         <div class="col-lg-4 col-xs-12 profile">
             <div class="col-12">
                 <img class="profile-picture img-fluid" alt="profile-picture" src="#">
