close #261 projects prolike styling of the user info box

--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -3,23 +3,63 @@
     width: 75%;
 }
 
-.row > * {
+.row>* {
     padding: 15px !important;
 }
 
 .col-12 {
     min-height: 300px;
     padding: 15px;
-    box-shadow: 0px 0px 12px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px -1px rgba(0, 0, 0, 0.75);
 }
 
+@media (max-width: 768px) {
+    .container {
+        width: 100% !important;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+
+// message board
 .cost-name {
     font-weight: bold;
     font-size: 24px;
 }
 
-@media (max-width: 768px) {
-    .container {
-       width: 100% !important;
-    } 
+// profile
+
+.profile {
+    align-content: center;
+    text-align: center;
+    padding: 0px;
+
+
+    .col-10 {
+        padding: 0px !important;
+    }
+
+    .profile p {
+        line-height: 5px;
+    }
+    
+    .profile-name {
+        font-weight: bold;
+    }
+
+    .profile-picture {
+        width: 50%;
+        height: auto;
+        border-radius: 50%;
+    }
+
 }
