--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -15,7 +15,26 @@ layout: page
 
         <div class="col-lg-4 col-xs-12 profile">
             <div class="col-12">
-                <img class="profile-picture img-fluid" alt="profile-picture" src="#">
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <p>you are singed in as</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <p class="profile-name">*name*</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <img class="profile-picture img-fluid" alt="profile-picture" src="#">
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <a target="_blank" href="#">Edit your profile</a>
+                    </div>
+                </div>
             </div>
         </div>
 
