close #263 projects prolike styling of the latest closed issue box

--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -73,3 +73,14 @@ a:hover {
     }
     
 }
+
+// last closed issue
+
+.closedIssue {
+    
+    .ci-number {
+        font-weight: bold;
+        color: #e59198;
+    }
+
+}
