--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -53,15 +53,12 @@ layout: page
 
         <div class="col-lg-4 col-xs-12 closedIssue">
             <div class="col-12">
-                <div class="closed-issue-box">
                     <p>Last closed issue:</p>
                     <h2 class="ci-number">#</h2>
-                    <h3 class="ci-title"></h3>
+                    <h3 class="ci-title box-title"></h3>
                     <p>Created on <span class="ci-time"></span> by <span class="ci-cont"></span></p>
-                    <div class="link">
-                        <a target="_blank" class="ci-link" href="#">View on Github</a>
-                    </div>
-                </div>
+                    <a target="_blank" class="ci-link" href="#">View on Github</a>
+ 
             </div>
         </div>
 
