close #265 projects prolike styling of the all issues in to do box

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -22,7 +22,7 @@ layout: page
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-10">
-                        <p class="profile-name box-title">*name*</p>
+                        <p class="profile-name box-title"></p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -62,24 +62,22 @@ layout: page
             </div>
         </div>
 
+
         <div class="col-lg-4 col-xs-12">
-            <div class="col-12 zenhub">
-                <div class="row">
-                    <div class="offset-1 col-10 justify-content-center">
+                <div class="col-12 zenhub">
                         <p class="box-title">Zenhub</p>
                         <a href="#">View Zenhub Board</a>
+                </div>
+            </div>
+
+        <div class="col-lg-8 col-xs-12 todo">
+                <div class="col-12">
+                        <p>All issues in To Do:</p>
+                    <div class="todo-list">
+    
                     </div>
                 </div>
             </div>
-        </div>
-
-
-
-        <div class="col-lg-8 col-xs-12 pipeline">
-            <div class="col-12">
-                <div class="pipeline-box"></div>
-            </div>
-        </div>
 
         <div class="col-lg-4 col-xs-12 storypoint">
             <div class="col-12">
@@ -90,14 +88,13 @@ layout: page
         </div>
 
 
-
-        <div class="col-lg-6 col-xs-12 todo">
-            <div class="col-12">
-                <div class="todo-list">
-
+        <div class="col-lg-6 col-xs-12 pipeline">
+                <div class="col-12">
+                    <div class="pipeline-box"></div>
                 </div>
             </div>
-        </div>
+
+
 
         <div class="col-lg-6 col-xs-12 cont">
             <div class="col-12">
