close #266 projects prolike styling of the piplines box

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -90,6 +90,7 @@ layout: page
 
         <div class="col-lg-6 col-xs-12 pipeline">
                 <div class="col-12">
+                    <p>Pipeline:</p>
                     <div class="pipeline-box"></div>
                 </div>
             </div>
