close #268 projects prolike styling of the story points box

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -80,10 +80,10 @@ layout: page
             </div>
 
         <div class="col-lg-4 col-xs-12 storypoint">
-            <div class="col-12">
-                <div class="storypoints">
-                    <h3 class="storypoint-number"></h3>
-                </div>
+            <div class="col-12 storypoints">
+                        <h3 class="storypoint-number"></h3>
+                        <p>stories</p>
+                    </div>
             </div>
         </div>
 
