--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -20,7 +20,7 @@
           <!-- <li> <a href="/stories/" data-proofer-ignore>Stories</a></li> -->
           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li>
           <li> <a href="/anything/" data-proofer-ignore>Anything</a></li>
-          <li> <a href="/flow/" data-proofer-ignore>Infographics</a></li>
+          <li> <a href="/things/" data-proofer-ignore>Things</a></li>
 <!--           <li> <a href="/bootcamp/" data-proofer-ignore>Bootcamp</a></li> -->
           <li> <a href="https://github.com/login/oauth/authorize?client_id={{ enviclient }}&scope=user%20repo" data-proofer-ignore>Log in</a></li>
           
