--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@
 @import "sections.scss";
 @import "navigation.scss";
 @import "footer.scss";
-@import "infographics.scss";
+@import "things.scss";
 @import "stories.scss";
 @import "picture.scss";
 @import "connect.scss";
