close #267 projects prolike styling of the contributors box

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -44,7 +44,7 @@ layout: page
                     <p>Last opened issue:</p>
                     <h2 class="ni-number">#</h2>
                     <h3 class="ni-title box-title"></h3>
-                    <p>Created on <span class="ni-time"></span> by <span class="ni-cont"></span></p>
+                    <p>Created on <span class="ni-time"></span> <br> by <span class="ni-cont"></span></p>
                     <a target="_blank" class="ni-link" href="#">View on Github</a>
             </div>
         </div>
@@ -82,10 +82,10 @@ layout: page
         <div class="col-lg-4 col-xs-12 storypoint">
             <div class="col-12 storypoints">
                         <h3 class="storypoint-number"></h3>
-                        <p>stories</p>
+                        <p>story points left</p>
                     </div>
             </div>
-        </div>
+        
 
 
         <div class="col-lg-6 col-xs-12 pipeline">
@@ -99,6 +99,7 @@ layout: page
 
         <div class="col-lg-6 col-xs-12 cont">
             <div class="col-12">
+                <p>contributors:</p>
                 <div class="contributors">
 
                 </div>
