close #288 projects prolike styling of the board page

--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -1,5 +1,9 @@
-.container {
+.project {
+
     margin-top: 75px;
+
+.container {
+
     width: 75%;
 
 }
@@ -185,4 +189,6 @@
     .contributer-box {
         padding-bottom: 5px;
     }
+}
+
 }
