--- a/_layouts/boards.html
+++ b/_layouts/boards.html
@@ -1,8 +1,15 @@
 ---
 layout: page
 ---
+<div class="container boards">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-xs-12 userlogin">
+            <h3>Tilgængelige boards for <span class="username"></span></h3>
+        </div>
+    </div>
 
-Tilgængelige boards for <h3 class="username"></h3>
-
+    <div class="row button justify-content-center">
+    </div>
+</div>
 {% include scripts/plugins.html %}
 <script src="/js/getBoard.js"></script>
