--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div class="container">
+<div class="container project">
 
     <div class="row">
         <div class="col-lg-8 col-xs-12 msgBoard">
