close #290 projects prolike make edit profile link go to the correct page

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -32,7 +32,7 @@ layout: page
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-10">
-                        <a target="_blank" href="#">Edit your profile</a>
+                        <a target="_blank" href="https://github.com/settings/profile">Edit your profile</a>
                     </div>
                 </div>
             </div>
