--- a/_layouts/stories.html
+++ b/_layouts/stories.html
@@ -7,14 +7,15 @@ layout: page
     <div class="intro"><h2>{{ page.title }}</h2>
         {{ page.content }}</div>
 
+        
     <div class="con-row">
 
-    {% for thing in site.things %}
+    {% for story in site.stories %}
 
     <div class="box-outer">
-        <a href="{{ thing.url }}">
+        <a href="{{ story.url }}">
                 <div class="box-inner">
-            <h3>{{ thing.title }}</h3>
+            <h3>{{ story.title }}</h3>
                 </div>
         </a>
     </div>
