--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -18,7 +18,7 @@ layout: page
                     {% for heading in section.headings %}<h1>{{ heading }}</h1>{% endfor %}</div>
                 <div class="texts{{ forloop.index0 }}">{% for text in section.texts %}<p>{{ text }}</p>{% endfor %}
                     {% if forloop.last %}
-                    <p><a class="back-things" href="/things/"><i class="fas fa-arrow-left"></i> Back to things</a>
+                    <p><a class="back-things" href="/stories/"><i class="fas fa-arrow-left"></i> Back to things</a>
                     {% endif %}</p>
                 </div>
 
